@startuml BCE_CreateCategory
title Create Category

left to right direction
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classBackgroundColor White
skinparam classBorderColor #333333

class "create_category.js" as B {
  +loadCategories()
  +showSuccess(msg)
}

class "CreateCategoryController" as C {
  +bool
  create(dict data)
}

class "FRACategory" as E {
  +bool
  create(dict data)
}

B -- C
C -- E

@enduml
